--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,11 @@
-REACT_APP_GRAPHQL_ENDPOINT=https://your-worker.your-subdomain.workers.dev/graphql
+# 环境变量配置
+# 请将下面的 URL 替换为你的实际 Workers URL
+
+# 生产环境 - Cloudflare Pages
+REACT_APP_GRAPHQL_ENDPOINT=https://chat-backend-workers.YOUR_SUBDOMAIN.workers.dev/graphql
+
+# 如果你的 Workers 有自定义域名，使用自定义域名：
+# REACT_APP_GRAPHQL_ENDPOINT=https://your-custom-domain.com/graphql
+
+# 本地开发环境
+# REACT_APP_GRAPHQL_ENDPOINT=http://localhost:8787/graphql
