--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "graphql": "^16.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^5.3.3",
     "web-vitals": "^3.5.0"
   },
   "scripts": {
@@ -39,9 +37,11 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.6",
     "@types/jest": "^29.5.8",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "postcss": "^8.4.32",
+    "react-scripts": "^5.0.1",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^4.9.5"
   }
 }
